# music-projects

./: README.md  au2wav.sh
denoising_autoencoder/pytorch_approach/: ConvAE.py
denoising_autoencoder/pytorch_approach/AE_MusicDenoising/: main.py
denoising_autoencoder/pytorch_approach/AE_MusicDenoising/libs/: ConvAE.py  __init__.py
denoising_autoencoder/tf_approach/: main.py  models.py
simple_music_classificator/: README.md
simple_music_classificator/slides_latex/: .gitignore  references.bib
simple_music_classificator/tensorflow_approach_python/: main.py
simple_music_classifier/: README.md
simple_music_classifier/pytorch_approach/: README.md  requirements.txt  requirements_CUDA.txt
simple_music_classifier/pytorch_approach/music_classifier/: PyTorch-music-classification.ipynb  data.py  graph.py  main.py  train.py
simple_music_classifier/pytorch_approach/music_classifier/.ipynb_checkpoints/: PyTorch-music-classification-checkpoint.ipynb
simple_music_classifier/slides/: .gitignore  20171115_slides.tex
simple_music_classifier/slides_latex/: afr_bachelor_presentation.aux  afr_bachelor_presentation.bbl  afr_bachelor_presentation.bcf  afr_bachelor_presentation.blg  afr_bachelor_presentation.nav  afr_bachelor_presentation.out  afr_bachelor_presentation.run.xml  afr_bachelor_presentation.tex  afr_bachelor_presentation.toc
simple_music_classifier/tensorflow_approach_java/: .project  pom.xml
simple_music_classifier/tensorflow_approach_java/src/main/java/: HelloTF.java  Main.java
simple_music_classifier/tensorflow_approach_java/src/tensorflow_approach_java/: Main.java
simple_music_classifier/tensorflow_approach_python/: .gitignore  main.py  models.py
simple_music_classifier/tensorflow_approach_python/.ipynb_checkpoints/: Denoising-Autoencoder-using-Tensorflow-checkpoint.ipynb
simple_music_classifier/tensorflow_approach_python/saved_models/28_Nov_2017_16h43m53s/: saved_model.pb
simple_music_classifier/tensorflow_approach_python/saved_models/28_Nov_2017_16h43m53s/variables/: variables.data-00000-of-00001  variables.index
simple_music_classifier/tensorflow_approach_python/saved_models/28_Nov_2017_16h55m24s/: saved_model.pb
simple_music_classifier/tensorflow_approach_python/saved_models/28_Nov_2017_16h55m24s/variables/: variables.data-00000-of-00001  variables.index
wave_to_wave/: #wave_to_wave.cpp#  .gitignore  CMakeLists.txt  LICENSE  README.md  example1_basic_usage.cpp  helpers.h  inputparser.cpp_EXCLUDE  inputparser.h_EXCLUDE  overlap_add_convolver.cpp  overlap_add_convolverh  wave_to_wave.cpp  wisdom
wave_to_wave/benchmark/: #benchmark_example.cpp#  .#benchmark_example.cpp  CMakeLists.txt  benchmark_example.cpp
wave_to_wave/include/: #signal.hpp#  convolver.hpp  helpers.hpp  inputparser.hpp  optimizer.hpp  sequence.hpp  signal.hpp  synth.hpp  w2w.hpp  wavelet_synth.hpp
wave_to_wave/test/: CMakeLists.txt  main_utest.cpp  matplotlib_test.cpp  test_sequence.txt  tests  utest_convolver.cpp  utest_helpers.cpp  utest_main.cpp  utest_optimizer.cpp  utest_sequence.cpp  utest_signal.cpp  utest_synth.cpp  xxx
wave_to_wave/test/misc/: plot_example.cpp
wave_to_wave/tests/: benchmark_example.cpp  utest_example.cpp  utest_main.cpp
